@@ -1,3 +1,8 @@
+2007-03-02  Piotr Eljasiak  <epiotr@use.pl>
+
+	* src/gnome-cmd-file-popmenu.cc:
+	Added app name to "_Open" item in RMB menu
+
 2007-02-28  Piotr Eljasiak  <epiotr@use.pl>
 
 	* src/gnome-cmd-file.cc:
